--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.17.2
+altgraph==0.17.5
 annotated-types==0.7.0
 anyio==4.12.0
 certifi==2025.11.12
@@ -13,9 +14,16 @@ Mako==1.3.10
 MarkupSafe==3.0.3
 msgpack==1.1.2
 oauthlib==3.3.1
+packaging==25.0
+pefile==2024.8.26
+pillow==12.0.0
 pydantic==2.12.5
 pydantic_core==2.41.5
+pyinstaller==6.17.0
+pyinstaller-hooks-contrib==2025.11
+pywin32-ctypes==0.2.3
 repath==0.9.0
+setuptools==80.9.0
 six==1.17.0
 SQLAlchemy==2.0.45
 typing-inspection==0.4.2
