--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.17.2
 altgraph==0.17.5
 annotated-types==0.7.0
 anyio==4.12.0
+bcrypt==5.0.0
 certifi==2025.11.12
 flet==0.80.0
 flet-desktop==0.80.0
